force-app/main/default/objects/Episode__c/Episode__c.object-meta.xml
<CustomObject>
    <description>For the purposes of the PMHC MDS, an Episode of Care is defined as a more or less continuous period of contact between a client and a PHN-commissioned provider organisation/clinician that starts at the point of first contact, and concludes at discharge. Episodes comprise a series of one or more Service Contacts. This structure allows for a logical data collection protocol that specifies what data are collected when, and by whom. Different sets of PMHC MDS items are collected at various points in the client’s engagement with the provider organisation. Some items are only collected once at the episode level, while others are collected at each Service Contact.</description>
    <label>Episode</label>
    <nameField>
        <label>Episode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Episodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>