force-app/main/default/objects/Episode__c/fields/client_consent__c.field-meta.xml
<CustomField>
    <fullName>client_consent__c</fullName>
    <label>Client Consent to Anonymised Data</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Yes</fullName>
            </value>
            <value>
                <fullName>2:	No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>