force-app/main/default/objects/Episode__c/fields/client_postcode__c.field-meta.xml
<CustomField>
    <fullName>client_postcode__c</fullName>
    <description>The Australian postcode of the client.</description>
    <label>Area of usual residence, postcode</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>