force-app/main/default/objects/Episode__c/fields/Employment_Participation__c.field-meta.xml
<CustomField>
    <fullName>Employment_Participation__c</fullName>
    <label>Employment Participation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Full-time</fullName>
            </value>
            <value>
                <fullName>2:	Part-time</fullName>
            </value>
            <value>
                <fullName>3:	Not applicable - not in the labour force</fullName>
            </value>
            <value>
                <fullName>9:	Not stated/inadequately described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>