force-app/main/default/objects/Episode__c/fields/Episode_Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Episode_Completion_Status__c</fullName>
    <label>Episode Completion Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	Episode open</fullName>
            </value>
            <value>
                <fullName>1:	Episode closed - treatment concluded</fullName>
            </value>
            <value>
                <fullName>2:	Episode closed administratively - client could not be contacted</fullName>
            </value>
            <value>
                <fullName>3:	Episode closed administratively - client declined further contact</fullName>
            </value>
            <value>
                <fullName>4:	Episode closed administratively - client moved out of area</fullName>
            </value>
            <value>
                <fullName>5:	Episode closed administratively - client referred elsewhere</fullName>
            </value>
            <value>
                <fullName>6:	Episode closed administratively - other reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>