force-app/main/default/objects/Episode__c/fields/Episode_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Episode_End_Date__c</fullName>
    <description>The date on which an Episode of Care is formally or administratively ended</description>
    <label>Episode End Date</label>
    <type>Date</type>
</CustomField>