force-app/main/default/objects/Episode__c/fields/Episode_Key__c.field-meta.xml
<CustomField>
    <fullName>Episode_Key__c</fullName>
    <description>This is a number or code assigned to each episode. The Episode Key is unique and stable for each episode at the level of the Provider Organisation.</description>
    <label>Episode Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>