force-app/main/default/objects/Episode__c/fields/Episode_Tags__c.field-meta.xml
<CustomField>
    <fullName>Episode_Tags__c</fullName>
    <description>List of tags for the episode.</description>
    <label>Episode Tags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>