force-app/main/default/objects/Episode__c/fields/Health_Care_Card__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Card__c</fullName>
    <label>Health Care Card</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Yes</fullName>
            </value>
            <value>
                <fullName>2:	No</fullName>
            </value>
            <value>
                <fullName>3:	Not Known</fullName>
            </value>
            <value>
                <fullName>9:	Not stated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>