force-app/main/default/objects/Episode__c/fields/Homelessness__c.field-meta.xml
<CustomField>
    <fullName>Homelessness__c</fullName>
    <label>Homelessness Flag</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Sleeping rough or in non-conventional accommodation</fullName>
            </value>
            <value>
                <fullName>2:	Short-term or emergency accommodation</fullName>
            </value>
            <value>
                <fullName>3:	Not homeless</fullName>
            </value>
            <value>
                <fullName>9:	Not stated / Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>