force-app/main/default/objects/Episode__c/fields/income_source__c.field-meta.xml
<CustomField>
    <fullName>income_source__c</fullName>
    <label>Source of Cash Income</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	N/A - Client aged less than 16 years</fullName>
            </value>
            <value>
                <fullName>1:	Disability Support Pension</fullName>
            </value>
            <value>
                <fullName>2:	Other pension or benefit (not superannuation)</fullName>
            </value>
            <value>
                <fullName>3:	Paid employment</fullName>
            </value>
            <value>
                <fullName>4:	Compensation payments</fullName>
            </value>
            <value>
                <fullName>5:	Other (e.g. superannuation, investments etc.)</fullName>
            </value>
            <value>
                <fullName>6:	Nil income</fullName>
            </value>
            <value>
                <fullName>7:	Not known</fullName>
            </value>
            <value>
                <fullName>9:	Not stated/inadequately described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>