force-app/main/default/objects/Episode__c/fields/Labour_Force_Status__c.field-meta.xml
<CustomField>
    <fullName>Labour_Force_Status__c</fullName>
    <label>Labour Force Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Employed</fullName>
            </value>
            <value>
                <fullName>2:	Unemployed</fullName>
            </value>
            <value>
                <fullName>3:	Not in the Labour Force</fullName>
            </value>
            <value>
                <fullName>9:	Not stated/inadequately described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>