force-app/main/default/objects/Episode__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Never married</fullName>
            </value>
            <value>
                <fullName>2:	Widowed</fullName>
            </value>
            <value>
                <fullName>3:	Divorced</fullName>
            </value>
            <value>
                <fullName>4:	Separated</fullName>
            </value>
            <value>
                <fullName>5:	Married (registered and de facto)</fullName>
            </value>
            <value>
                <fullName>6:	Not stated/inadequately described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>