force-app/main/default/objects/Episode__c/fields/medication_hypnotics__c.field-meta.xml
<CustomField>
    <fullName>medication_hypnotics__c</fullName>
    <label>Medication - Hypnotics and sedatives (N0</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Yes</fullName>
            </value>
            <value>
                <fullName>2:	No</fullName>
            </value>
            <value>
                <fullName>9:	Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>