force-app/main/default/objects/Episode__c/fields/mental_health_treatment_plan__c.field-meta.xml
<CustomField>
    <fullName>mental_health_treatment_plan__c</fullName>
    <label>GP Mental Health Treatment Plan Flag</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Yes</fullName>
            </value>
            <value>
                <fullName>2:	No</fullName>
            </value>
            <value>
                <fullName>3:	Unknown</fullName>
            </value>
            <value>
                <fullName>9:	Not stated/inadequately described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>