force-app/main/default/objects/Episode__c/fields/NDIS_Participant__c.field-meta.xml
<CustomField>
    <fullName>NDIS_Participant__c</fullName>
    <label>NDIS Participant</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Yes</fullName>
            </value>
            <value>
                <fullName>2:	No</fullName>
            </value>
            <value>
                <fullName>9:	Not stated/inadequately described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>