force-app/main/default/objects/Episode__c/fields/Organisation_type_referred_to_at_Episode__c.field-meta.xml
<CustomField>
    <fullName>Organisation_type_referred_to_at_Episode__c</fullName>
    <label>Organisation type referred to at Episode</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	None/Not applicable</fullName>
            </value>
            <value>
                <fullName>1:	General Practice</fullName>
            </value>
            <value>
                <fullName>2:	Medical Specialist Consulting Rooms</fullName>
            </value>
            <value>
                <fullName>3:	Private practice</fullName>
            </value>
            <value>
                <fullName>4:	Public mental health service</fullName>
            </value>
            <value>
                <fullName>5:	Public Hospital</fullName>
            </value>
            <value>
                <fullName>6:	Private Hospital</fullName>
            </value>
            <value>
                <fullName>7:	Emergency Department</fullName>
            </value>
            <value>
                <fullName>8:	Community Health Centre</fullName>
            </value>
            <value>
                <fullName>9:	Drug and Alcohol Service</fullName>
            </value>
            <value>
                <fullName>10:	Community Support Organisation NFP</fullName>
            </value>
            <value>
                <fullName>11:	Indigenous Health Organisation</fullName>
            </value>
            <value>
                <fullName>12:	Child and Maternal Health</fullName>
            </value>
            <value>
                <fullName>13:	Nursing Service</fullName>
            </value>
            <value>
                <fullName>14:	Telephone helpline</fullName>
            </value>
            <value>
                <fullName>15:	Digital health service</fullName>
            </value>
            <value>
                <fullName>16:	Family Support Service</fullName>
            </value>
            <value>
                <fullName>17:	School</fullName>
            </value>
            <value>
                <fullName>18:	Tertiary Education institution</fullName>
            </value>
            <value>
                <fullName>19:	Housing service</fullName>
            </value>
            <value>
                <fullName>20:	Centrelink</fullName>
            </value>
            <value>
                <fullName>21:	Other</fullName>
            </value>
            <value>
                <fullName>22:	HeadtoHelp / HeadtoHealth Hub</fullName>
            </value>
            <value>
                <fullName>23:	Other PHN funded service</fullName>
            </value>
            <value>
                <fullName>24:	AMHC</fullName>
            </value>
            <value>
                <fullName>99:	Not stated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>