force-app/main/default/objects/Episode__c/fields/Principal_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Principal_Diagnosis__c</fullName>
    <label>Principal Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100:	Anxiety disorders (ATAPS)</fullName>
            </value>
            <value>
                <fullName>101:	Panic disorder</fullName>
            </value>
            <value>
                <fullName>102:	Agoraphobia</fullName>
            </value>
            <value>
                <fullName>103:	Social phobia</fullName>
            </value>
            <value>
                <fullName>104:	Generalised anxiety disorder</fullName>
            </value>
            <value>
                <fullName>105:	Obsessive-compulsive disorder</fullName>
            </value>
            <value>
                <fullName>106:	Post-traumatic stress disorder</fullName>
            </value>
            <value>
                <fullName>107:	Acute stress disorder</fullName>
            </value>
            <value>
                <fullName>108:	Other anxiety disorder</fullName>
            </value>
            <value>
                <fullName>200:	Affective (Mood) disorders (ATAPS)</fullName>
            </value>
            <value>
                <fullName>201:	Major depressive disorder</fullName>
            </value>
            <value>
                <fullName>202:	Dysthymia</fullName>
            </value>
            <value>
                <fullName>203:	Depressive disorder NOS</fullName>
            </value>
            <value>
                <fullName>204:	Bipolar disorder</fullName>
            </value>
            <value>
                <fullName>205:	Cyclothymic disorder</fullName>
            </value>
            <value>
                <fullName>206:	Other affective disorder</fullName>
            </value>
            <value>
                <fullName>300:	Substance use disorders (ATAPS)</fullName>
            </value>
            <value>
                <fullName>301:	Alcohol harmful use</fullName>
            </value>
            <value>
                <fullName>302:	Alcohol dependence</fullName>
            </value>
            <value>
                <fullName>303:	Other drug harmful use</fullName>
            </value>
            <value>
                <fullName>304:	Other drug dependence</fullName>
            </value>
            <value>
                <fullName>305:	Other substance use disorder</fullName>
            </value>
            <value>
                <fullName>400:	Psychotic disorders (ATAPS)</fullName>
            </value>
            <value>
                <fullName>401:	Schizophrenia</fullName>
            </value>
            <value>
                <fullName>402:	Schizoaffective disorder</fullName>
            </value>
            <value>
                <fullName>403:	Brief psychotic disorder</fullName>
            </value>
            <value>
                <fullName>404:	Other psychotic disorder</fullName>
            </value>
            <value>
                <fullName>501:	Separation anxiety disorder</fullName>
            </value>
            <value>
                <fullName>502:	Attention deficit hyperactivity disorder (ADHD)</fullName>
            </value>
            <value>
                <fullName>503:	Conduct disorder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>