force-app/main/default/objects/Episode__c/fields/principal_focus__c.field-meta.xml
<CustomField>
    <fullName>principal_focus__c</fullName>
    <label>Principal Focus of Treatment Plan</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Psychological therapy</fullName>
            </value>
            <value>
                <fullName>2:	Low intensity psychological intervention</fullName>
            </value>
            <value>
                <fullName>3:	Clinical care coordination</fullName>
            </value>
            <value>
                <fullName>4:	Complex care package</fullName>
            </value>
            <value>
                <fullName>5:	Child and youth-specific mental health services</fullName>
            </value>
            <value>
                <fullName>6:	Indigenous-specific mental health services</fullName>
            </value>
            <value>
                <fullName>7:	Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>