force-app/main/default/objects/Episode__c/fields/Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Date__c</fullName>
    <description>The date the referrer made the referral.</description>
    <label>Referral Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>