force-app/main/default/objects/Episode__c/fields/Referrer_Profession__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Profession__c</fullName>
    <label>Referrer Profession</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	General Practitioner</fullName>
            </value>
            <value>
                <fullName>2:	Psychiatrist</fullName>
            </value>
            <value>
                <fullName>3:	Obstetrician</fullName>
            </value>
            <value>
                <fullName>4:	Paediatrician</fullName>
            </value>
            <value>
                <fullName>5:	Other Medical Specialist</fullName>
            </value>
            <value>
                <fullName>6:	Midwife</fullName>
            </value>
            <value>
                <fullName>7:	Maternal Health Nurse</fullName>
            </value>
            <value>
                <fullName>8:	Psychologist</fullName>
            </value>
            <value>
                <fullName>9:	Mental Health Nurse</fullName>
            </value>
            <value>
                <fullName>10:	Social Worker</fullName>
            </value>
            <value>
                <fullName>11:	Occupational therapist</fullName>
            </value>
            <value>
                <fullName>12:	Aboriginal Health Worker</fullName>
            </value>
            <value>
                <fullName>13:	Educational professional</fullName>
            </value>
            <value>
                <fullName>14:	Early childhood service worker</fullName>
            </value>
            <value>
                <fullName>15:	Other</fullName>
            </value>
            <value>
                <fullName>98:	N/A - Self referral</fullName>
            </value>
            <value>
                <fullName>99:	Not stated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>